--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
         <div class='row'>
             <div class='col-4'></div>
             <div class='col-4'>
+                <div class="alert alert-success message" role="alert">
+                    Ice cream added to your basket!
+                </div>
                 <button style='float:right' type="button" class="btn btn-primary addToBasket">Add to Basket</button>
             </div>
             <div class='col-4'></div>
