alert message fixed

--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
         <div class='displayTotal'>
         </div>
         <div class='row'>
-            <div class='col-4'></div>
-            <div class='col-4'>
+            <div class='col-sm'></div>
+            <div class='col-sm'>
                 <button style='float:right' type="button" class="btn btn-primary addToBasket">Add to Basket</button><br><br>
                 <div class="alert alert-success message" role="alert">
                     Ice cream added!
                 </div>
             </div>
-            <div class='col-4'></div>
+            <div class='col-sm'></div>
         </div>
     </div>
 
