--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             <div class='col-sm'></div>
             <div class='col-sm'>
                 <h1 style='color:white'>Ice cream widget</h1>
-                <button type="button" class="btn btn-primary displayOrder">Order ice cream</button>
-                <button type="button" class="btn btn-primary displayBasket">Basket</button>
+                <button type="button" class="btn btn-warning displayOrder">Order ice cream</button>
+                <button type="button" class="btn btn-warning displayBasket">Basket</button>
             </div>
             <div class='col-sm'></div>
         </div>
@@ -121,7 +121,7 @@
         <div class='row'>
             <div class='col-sm'></div>
             <div class='col-sm'>
-                <button style='float:right;' type="button" class="btn btn-primary addToBasket">Add to Basket</button><br><br>
+                <button style='float:right;margin:5px' type="button" class="btn btn-info addToBasket">Add to Basket</button><br><br>
                 <div class="alert alert-success message" role="alert">
                     Ice cream added!
                 </div>
