--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
         <div class='row'>
                 <div class='col-sm'></div>
                 <div class='col-sm'>
-                    <strong style='float:right; margin-top:15px; background-color:white; border-radius:5px'>Total: <span>R{{ total }}</span></strong>
+                    <strong style='margin-top:15px; background-color:white; border-radius:5px'>Total: <span>R{{ total }}</span></strong><br>
+                    <strong style='margin-top:15px; background-color:white; border-radius:5px'>Items in basket: {{ count }}</span></strong>
                 </div>
                 <div class='col-sm'></div>
             </div>
@@ -121,7 +122,8 @@
         <div class='row'>
             <div class='col-sm'></div>
             <div class='col-sm'>
-                <button style='float:right;margin:5px' type="button" class="btn btn-info addToBasket">Add to Basket</button><br><br>
+                <button style='float:right;margin:5px' type="button" class="btn btn-info addToBasket">Add to
+                    Basket</button><br><br>
                 <div class="alert alert-success message" role="alert">
                     Ice cream added!
                 </div>
